improved skill section, ui animations

--- a/styles/pages/_contact.scss
+++ b/styles/pages/_contact.scss
@@ -1,8 +1,59 @@
 #body-contact {
   background-color: var(--primary-color);
-  height: 100vh;
+  min-height: 100vh;
+
+  .side-nav__content--social a {
+    &:hover, &:active { color: var(--primary-color) }
+  }
 }
 
 #header-contact, #sideNav-contact {
   background-color: var(--secondary-color);
+}
+
+/********************* Contact Section**************************/
+section#contact {
+  height: 100vh;
+  background-image: url("../../public/background-yosemite.jpeg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.contact__form {
+  flex-basis: 40rem;
+
+  display: flex;
+  flex-direction: column;
+  background-color: var(--tertiary-color-m);
+}
+
+.contact__form input,
+.contact__form textarea {
+  color: white;
+  font-family: "Indie Flower", cursive;
+  font-size: 1.5rem;
+  letter-spacing: 0.2rem;
+  padding: 2rem;
+  background: transparent;
+  border: none;
+  border-bottom: var(--secondary-color) solid 0.1rem;
+}
+
+.contact__form textarea {
+  height: 30vh;
+}
+
+input[type="submit"] {
+  border: none;
+  cursor: pointer;
+}
+
+.contact__form input::placeholder,
+.contact__form textarea::placeholder {
+  color: white;
 }
