--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -35,7 +35,7 @@ ul.header__main-nav--links li a:visited::after {
   position: absolute;
   left: 0;
   width: 100%;
-  height: 0.25rem;
+  height: 0.26rem;
   background-color: white;
 
   transform: scaleX(0);
@@ -62,3 +62,18 @@ ul.header__main-nav--links li a:hover::after,
 ul.header__main-nav--links li a:active::after {
   transform: scaleX(1);
 }
+
+#active {
+  border-bottom: 3px solid white;
+  line-height: 1px;
+}
+
+
+#active:hover::before,
+#active:active::before,
+#active:hover::after,
+#active:active::after {
+  transform: scaleX(0);
+}
+
+
