--- a/styles/pages/_contact.scss
+++ b/styles/pages/_contact.scss
@@ -1,6 +1,6 @@
 #body-contact {
   background-color: var(--primary-color);
-  min-height: 100vh;
+  // min-height: 100vh;
 
   .side-nav__content--social a {
     &:hover, &:active { color: var(--primary-color) }
